# Lab_works

./: README.md
1 semester/Laboratory 10/: README.md  main.cpp
1 semester/Laboratory 1_10/: Rectangle.cpp
1 semester/Laboratory 6/: CMakeLists.txt  README.md
1 semester/Laboratory 8/: CMakeLists.txt  README.md
2 semester/Laboratory 1/: README.md  main.cpp
2 semester/Laboratory 10/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratory 10/inc/: BMP.hpp
2 semester/Laboratory 10/inc/mathutils/: Matrix.hpp
2 semester/Laboratory 10/src/: BMP.cpp
2 semester/Laboratory 11/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratory 11/inc/: SomeFunctions.hpp  c_plus_plus.hpp  java.hpp  php.hpp
2 semester/Laboratory 12/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratory 2/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratory 2_2/: main.cpp
2 semester/Laboratory 3/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratory 4/: CMakeLists.txt  main.cpp
2 semester/Laboratory 5/: CMakeLists.txt  README.md  input.txt  main.cpp
2 semester/Laboratory 6/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratory 7/: README.md  main.cpp
2 semester/Laboratory 8/: CMakeLists.txt  main.cpp
2 semester/Laboratory 9/: CMakeLists.txt  README.md  main.cpp
2 semester/Laboratoty 7/: CMakeLists.txt  main.cpp
3 semester/Algorithms and data structures/: README.md
3 semester/Programming/: README.md
Laboratory 10/: main.cpp
Laboratory 11/: CMakeLists.txt  main.cpp
Laboratory 6/: n6l6.cpp
Laboratory 8/: lab8.3.cpp
(+231 files in other folders)
